# c2s-challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/endpoints/: automovel_endpoints.py
app/cli/: cli.py  llm_agent.py
app/core/: config.py
app/repository/: connection.py
app/repository/models/: automovel.py
app/schemas/: automovel_schemas.py  common_schemas.py
app/scripts/: check_llm_version.py  create_tables.py  seed_data.py
app/view/: automovel_crud.py
testes/: conftest.py  test_crud.py  test_endpoints.py
