[project]
name = "c2s-challenge"
version = "0.1.0"
description = "Uma API de gerenciamento de automóveis"
authors = [
    { name = "Pedro Pires", email = "pedropires.py@gmail.com" }
]
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "asyncpg",
    "Faker",
    "rich",
    "langchain",
    "langchain_community",
    "langchain-google-genai",
    "google-generativeai",
    "python-dotenv",
    "httpx",
    "faker-vehicle",
    # Dependências de teste
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
    # Dependências de formatação de código
    "black",
    "isort",
]


#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
